name:                ghost
version:             0.0.0
Cabal-Version:       >= 1.2
synopsis:            Git hosting tools.
description:         Ghost is a suite of Git hosting tools written in Haskell.
category:            Data
license:             BSD3
license-file:        LICENSE
author:              Vo Minh Thu
maintainer:          noteed@gmail.com
build-type:          Simple

executable ghost-shell
  hs-source-dirs:      bin
  main-is:             ghost-shell.hs
  build-depends:       base == 4.*,
                       cmdargs == 0.9.*,
                       filepath == 1.2.*
  ghc-options:         -Wall

executable ghost-command
  hs-source-dirs:      bin
  main-is:             ghost-command.hs
  build-depends:       base == 4.*,
                       cmdargs == 0.9.*,
                       filepath == 1.2.*,
                       unix == 2.4.2.*
  ghc-options:         -Wall

executable ghost-control
  hs-source-dirs:      bin
  main-is:             ghost-control.hs
  build-depends:       base == 4.*,
                       cmdargs == 0.9.*,
                       directory == 1.1.*,
                       filepath == 1.2.*
  ghc-options:         -Wall
