name:                ghost
version:             0.1.0
Cabal-Version:       >= 1.8
synopsis:            Git hosting tools.
description:         Ghost is a suite of Git hosting tools written in Haskell.
category:            Data
license:             BSD3
license-file:        LICENSE
author:              Vo Minh Thu
maintainer:          noteed@gmail.com
build-type:          Simple

-- When enabled, ghost can use a Linode API key to create domains for users
-- and projects.
flag linode
  default: False

library
  build-depends:       base == 4.*,
                       directory,
                       filepath,
                       process
  exposed-modules:     Ghost
  ghc-options:         -Wall

executable ghost-shell
  hs-source-dirs:      bin
  main-is:             ghost-shell.hs
  build-depends:       base == 4.*,
                       cmdargs,
                       filepath
  ghc-options:         -Wall

executable ghost-command
  hs-source-dirs:      bin
  main-is:             ghost-command.hs
  build-depends:       base == 4.*,
                       cmdargs,
                       directory,
                       filepath,
                       unix
  ghc-options:         -Wall

executable ghost-control
  hs-source-dirs:      bin
  main-is:             ghost-control.hs
  build-depends:       base == 4.*,
                       cmdargs,
                       directory,
                       filepath,
                       ghost
  ghc-options:         -Wall
  if flag(linode)
    cpp-options: -DUSE_LINODE

executable ghost-post-update
  hs-source-dirs:      bin
  main-is:             ghost-post-update.hs
  build-depends:       base == 4.*,
                       cmdargs,
                       directory,
                       filepath,
                       ghost
  ghc-options:         -Wall
  if flag(linode)
    build-depends: hlinode == 0.0.0
    cpp-options: -DUSE_LINODE
